[package]
name = "ip"
license = "MIT"
version = "1.1.0"
authors = ["David Hotham"]
description = """
Provides the IpAddr enum, which can represent either an IPv4 or an IPv6 address
"""
homepage = "https://github.com/dimbleby/ip-rs"
repository = "https://github.com/dimbleby/ip-rs"
documentation = "http://dimbleby.github.io/ip-rs"
readme = "README.md"
keywords = ["IP"]
