[package]
name = "ip"
license = "MIT"
version = "1.1.1"
authors = ["David Hotham"]
description = """
Provides the IpAddr enum, which can represent either an IPv4 or an IPv6 address.

Do not use this crate!  As of Rust 1.7.0, the `std::net::IpAddr` is stabilized - and should be preferred.
"""
homepage = "https://github.com/dimbleby/ip-rs"
repository = "https://github.com/dimbleby/ip-rs"
documentation = "http://dimbleby.github.io/ip-rs"
readme = "README.md"
keywords = ["IP"]
